# projectscraper

scraperproject/: 1.js  1.rest  Home.py  cleaner.py  config.ini  db.py  eans-ali-prices.ipynb  insert_eans_into_db.py  insert_older_products_from_logs_and_tiny.py  item.rest  load_to_shopify.py  models.py  pyproject.toml  refresh_products.py  requirements.txt  scrape-category.py  scrape-products.py  scrape-query.py  scrape-store.py  search-query.rest  session.json  settings.py  summary-models.json
scraperproject/html_to_categories_level_1_2/: categories.html  html_categories_to_csv_xlsx.py
